@@ -1125,27 +1125,32 @@ BEGIN
     GROUPBOX        "",IDC_STATIC,3,84,264,60
 END
 
-IDD_ADDEDIT_ADDITIONAL DIALOGEX 0, 0, 278, 236
+IDD_ADDEDIT_ADDITIONAL DIALOGEX 0, 0, 277, 287
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CAPTION | WS_SYSMENU
 CAPTION "Additional"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "&Autotype:",IDC_STATIC_AUTO,4,9,54,8,SS_NOTIFY
-    EDITTEXT        IDC_AUTOTYPE,64,6,208,14,ES_AUTOHSCROLL
-    LTEXT           "Run Cmd:",IDC_STATIC_RUNCMD,4,29,54,8,SS_NOTIFY
-    EDITTEXT        IDC_RUNCMD,64,26,208,14,ES_AUTOHSCROLL
-    LTEXT           "Double-Click Action:",IDC_STATIC,4,47,54,16
-    CONTROL         "Use Default",IDC_DCA_DEFAULT,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,63,47,56,16
-    COMBOBOX        IDC_DOUBLE_CLICK_ACTION,120,49,152,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "&Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,90,43,10
-    EDITTEXT        IDC_MAXPWHISTORY,63,88,18,14,ES_NUMBER
-    CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,80,88,10,14
-    LTEXT           "last passwords",IDC_STATIC_OLDPW1,97,90,159,10
-    CONTROL         "",IDC_PWHISTORY_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,8,109,258,79
-    PUSHBUTTON      "Clear History",IDC_CLEAR_PWHIST,8,194,60,14
-    PUSHBUTTON      "Copy All",IDC_PWH_COPY_ALL,206,193,60,14
-    GROUPBOX        "Password History",IDC_STATIC_PWH_EDIT,1,75,271,137
-    GROUPBOX        "Password History",IDC_STATIC_PWH_ADD,1,75,258,33
+    LTEXT           "&Autotype:",IDC_STATIC_AUTO,4,54,54,8,SS_NOTIFY
+    EDITTEXT        IDC_AUTOTYPE,64,51,208,14,ES_AUTOHSCROLL
+    LTEXT           "Run Cmd:",IDC_STATIC_RUNCMD,4,84,54,8,SS_NOTIFY
+    EDITTEXT        IDC_RUNCMD,64,81,208,14,ES_AUTOHSCROLL
+    LTEXT           "Double-Click Action:",IDC_STATIC,4,102,54,16
+    CONTROL         "Use Default",IDC_DCA_DEFAULT,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,63,102,56,16
+    COMBOBOX        IDC_DOUBLE_CLICK_ACTION,120,104,152,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "&Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,145,43,10
+    EDITTEXT        IDC_MAXPWHISTORY,63,143,18,14,ES_NUMBER
+    CONTROL         "",IDC_PWHSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,80,143,10,14
+    LTEXT           "last passwords",IDC_STATIC_OLDPW1,97,145,159,10
+    CONTROL         "",IDC_PWHISTORY_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,8,164,258,79
+    PUSHBUTTON      "Clear History",IDC_CLEAR_PWHIST,8,249,60,14
+    PUSHBUTTON      "Copy All",IDC_PWH_COPY_ALL,206,249,60,14
+    GROUPBOX        "Password History",IDC_STATIC_PWH_EDIT,1,130,271,137
+    GROUPBOX        "Password History",IDC_STATIC_PWH_ADD,1,130,258,33
+    LTEXT           "PasswordSafe default:",IDC_STATIC,4,16,80,10
+    EDITTEXT        IDC_PWS_DEFAULTAUTOTYPE,85,15,165,12,ES_READONLY | NOT WS_BORDER
+    LTEXT           "Database default:",IDC_STATIC,4,34,80,10
+    EDITTEXT        IDC_DB_DEFAULTAUTOTYPE,85,33,165,12,ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Autotype",IDC_STATIC,1,4,271,67
 END
 
 IDD_ADDEDIT_DATETIMES DIALOGEX 0, 0, 278, 249
@@ -1757,7 +1762,8 @@ BEGIN
 
     IDD_ADDEDIT_ADDITIONAL, DIALOG
     BEGIN
-        RIGHTMARGIN, 264
+        RIGHTMARGIN, 263
+        BOTTOMMARGIN, 236
     END
 
     IDD_ADDEDIT_DATETIMES, DIALOG
