@@ -859,3 +859,8 @@ BEGIN
   IDS_EXP_SBASE_EXP        "Shortcut Base entry - password expired"
   IDS_EXPIREPASSWORDS      "Entries with a password expiry"
 END
+
+STRINGTABLE
+BEGIN
+  IDS_NOTSET               "Not Set"
+END
